fix letter-spacing

--- a/components/Connect/Connect.module.sass
+++ b/components/Connect/Connect.module.sass
@@ -25,6 +25,8 @@
    line-height: 32px
    font-weight: 700
    margin-bottom: 4px
+   letter-spacing: .5px
+
 
 
 .description
