--- a/components/Header/Header.module.sass
+++ b/components/Header/Header.module.sass
@@ -3,6 +3,7 @@
 ._
    color: #fff
    padding: 35px 0
+   letter-spacing: .5px
 
 
 .title
@@ -87,6 +88,7 @@
 @media (max-width: $mobile)
    ._
       text-align: center
+      letter-spacing: normal
 
 
    .description
