--- a/components/Terms/Terms.module.sass
+++ b/components/Terms/Terms.module.sass
@@ -12,7 +12,7 @@
 
 .term
    width: 50%
-   max-width: 304px
+   max-width: 344px
    margin-top: 16px
 
    &:last-child
@@ -31,6 +31,7 @@
       font-weight: 500
       line-height: 28px
       margin-bottom: 2px
+      letter-spacing: .5px
 
    &__description
       font-size: 15px
